[package]
name = "raining"
version = "0.1.0"
authors = ["Matjaz Drolc <mdrolc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde = "1.0.101"
serde_json = "1.0"
chrono = "0.4"
image = "0.22.3"
regex = "1.3.1"
log = "0.4.0"
env_logger = "0.7.1"
